--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .input-search {
+    @apply text-[13px] box-border pl-10 pr-5 h-10 outline-0 border-none bg-[#f5f8ff] rounded-md focus:bg-[#fff] focus:border focus:border-solid focus:border-primary focus:shadow-input transition-all duration-300 ease-in-out;
+  }
+  .dropdown-menu {
+    @apply bg-[#fff] rounded-lg shadow-dropdown;
+  }
+  .btn {
+    @apply active:shadow-btn focus:shadow-btn bg-primary text-[#fff] rounded-[4px] px-4 py-2 font-semibold text-sm;
+  }
+  .overlay {
+    @apply fixed inset-0 bg-overlay z-30;
+  }
+}
+
+.btn:hover {
+  background: linear-gradient(227deg, #ff4582, #e12e0d);
+}
+
+.hover-stroke:hover path {
+  stroke: #005ef6;
+}
+
+.two-line-truncate {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
